fixed spacing on filtering section

--- a/main/static/main/common.css
+++ b/main/static/main/common.css
@@ -8,7 +8,7 @@ tfoot, tr, th, td {
     font-size: inherit;
     margin: 0;
     padding: 0;
-    vertical-align: top;
+    vertical-align: middle;
 }
 body {
     line-height: 1;
@@ -724,6 +724,7 @@ table.filterCriteriaTable tr.nodata:hover {
 table.filterCriteriaTable input[type="checkbox"] {
     margin-left: 4px;
     margin-right: 4px;
+    vertical-align: middle;
 }
 p.lastViewed {
     font-size: 24px;
@@ -985,7 +986,7 @@ table.formTable {
 }
 table.formTable tr > td {
     text-align:left;
-    vertical-align:top;
+    vertical-align:middle;
     padding:4px 6px 4px 4px;
 }
 table.formTable tr > td.form-label {
@@ -1063,7 +1064,6 @@ div.multientrybutton {
 .line-action {
     margin-top: 10px;
 }
-
 /* Autocomplete input element styling */
 
 ul.edd-autocomplete-list {
